--- a/Edit.html
+++ b/Edit.html
@@ -13,5 +13,25 @@
             <li><a class="active" href="Edit.html">設定</a></li>
             <li><a href="Help.html">使用方法</a></li>
         </ul>
+
+        <div class="registration">
+            <dl>
+                <dt>追加する商品名</dt>
+                <dd><input type="text" name="name" value="" id="input1"></dd>
+                <br>
+                <dt>商品の販売速度(個/h)</dt>
+                <dd><input type="number" name="speed" value="" id="input2"></dd>
+            </dl>
+            <button id="btn1">登録</button>
+        </div>
+
+        <div class="delete">
+                <dl>
+                    <br>
+                    <dt class="dele">削除する商品名</dt>
+                    <dd><input type="text" name="name" value="" id="delete"></dd>
+                </dl>
+                <button id="btn2">削除</button>
+            </div>
     </body>
 </html>
